# Pose-Lookup-Method

./: .gitignore  README.md
python_examples/: generateLookupTable.ipynb  generatePointCloud.ipynb
sample_data/: bunny_lookupTable  bunny_lookupTable_config.m  bunny_pointcloud  bunny_pointcloud_config.m  testConfig
src/: CMakeLists.txt  generateLookupTable.cpp  helper.cpp  helper.h  main.cpp  plum.cpp  raycastModel.cpp  utils.cpp  utils.hpp
